add error handling

--- a/src/gui.html
+++ b/src/gui.html
@@ -261,6 +261,14 @@
         <sly-card title="Preview"
                   subtitle="Preview python code and aug result on a random image"
                   style="width: 100%">
+
+            <sly-notification
+                    class="mb15"
+                    v-if="data.error"
+                    :options="{'name': 'Selected aug is broken. Please, contact support', 'type': 'error'}"
+                    :content="data.error">
+            </sly-notification>
+
             <div v-if="!state.previewPy">
                 <el-tag type="primary"><i class="zmdi zmdi-help-outline mr5"></i> Press Preview button to show python
                     code and visualize image examples
