export dialog - change name description

--- a/src/gui.html
+++ b/src/gui.html
@@ -151,7 +151,8 @@
             <!--            </sly-icon>-->
             <el-input placeholder="Please input destination directory" v-model="state.saveDir"></el-input>
         </sly-field>
-        <sly-field title="Name" description="py and json configurations will be saved with this name">
+        <sly-field title="Name" description="py and json configurations will be saved with this name. If name already
+                                             exists, a new one will be generated automatically">
             <!--            <sly-icon slot="icon" :options="{ color: '#33c94c', bgColor: '#d9f7e4', rounded: false }">-->
             <!--                <i class="zmdi zmdi-star"></i>-->
             <!--            </sly-icon>-->
