--- a/src/gui.html
+++ b/src/gui.html
@@ -24,15 +24,41 @@
         }
     </sly-style>
 
-    <sly-card title="Your custom augmentation pipeline"
-              subtitle="Add transformations in a sequence, preview the results of individual aug or a whole pipeline">
+    <sly-card title="Input">
         <sly-field title="" description="Input project">
             <a slot="title" target="_blank"
                :href="`/projects/${data.projectId}/datasets`">{{data.projectName}} ({{data.projectItemsCount}}
                 images)</a>
             <sly-icon slot="icon" :options="{ imageUrl: `${data.projectPreviewUrl}` }"/>
         </sly-field>
+        <sly-field title="Initialization" description="Build augs pipeline from scratch or load augs from
+                          existing pipeline (safe .json format)">
+            <el-select v-model="state.initMode" style="width: 250px;">
+                <el-option label="start from scratch" value="new"></el-option>
+                <el-option label="load augs from existing pipeline" value="load"></el-option>
+            </el-select>
+            <el-button v-if="state.initMode === 'new'"
+                       type="primary" class="regular" size="small"
+                       @click="command('clear_pipeline')">
+                New
+            </el-button>
+            <div class="fflex mt10" v-if="state.initMode === 'load'">
+                <el-input placeholder="Please input path to json configuration in Team Files"
+                          v-model="state.pipelinePath">
+                </el-input>
+                <el-button
+                        style="margin-left: 5px;"
+                        type="primary" class="regular" size="small"
+                        :disabled="state.pipelinePath.length === 0"
+                        @click="command('load_existing_pipeline')">
+                    Load
+                </el-button>
+            </div>
+        </sly-field>
+    </sly-card>
 
+    <sly-card class="mt15" title="Your custom augmentation pipeline"
+              subtitle="Add transformations in a sequence, preview the results of individual aug or a whole pipeline">
         <div v-if="data.pipeline.length === 0">
             No augmentations in pipeline
         </div>
@@ -61,11 +87,6 @@
                                    @click="state.augIndex = index; command('move_aug_down')">
                             <i class="zmdi zmdi-long-arrow-down"></i>
                         </el-button>
-<!--                        <el-button size="small"-->
-<!--                                   class="action-icon-btn"-->
-<!--                                   @click="state.augIndex = index; command('edit_aug')">-->
-<!--                            <i class="zmdi zmdi-edit"></i>-->
-<!--                        </el-button>-->
                         <el-button size="small"
                                    class="action-icon-btn"
                                    @click="state.augIndex = index; command('delete_aug')">
@@ -100,7 +121,6 @@
                     @click="command('preview_pipeline')">
                 <i class="zmdi zmdi-slideshow mr5"></i>Preview
             </el-button>
-            <!--            :plain="true"-->
             <el-button
                     style="margin-left: 5px;"
                     type="primary" class="regular" size="small"
@@ -111,6 +131,17 @@
         </div>
     </sly-card>
 
+    <el-dialog title="Oops! Something went wrong"
+               :visible.sync="state.showError"
+               size="tiny">
+        <sly-notification
+                class="mt10"
+                v-if="data.error"
+                :options="{'name': 'Please try again or contact support', 'type': 'error'}"
+                :content="data.error">
+        </sly-notification>
+    </el-dialog>
+
     <el-dialog title="Export pipeline"
                :visible.sync="state.saveMode"
                size="tiny">
@@ -120,15 +151,10 @@
                                    can be used for real-time augmentations during training for some Neural Networks from Ecosystem.">
         </sly-notification>
         <sly-field title="Directory" description="Configurations will be saved to Team Files">
-<!--            <sly-icon slot="icon" :options="{ color: '#33c94c', bgColor: '#d9f7e4', rounded: false }">-->
-<!--                <i class="zmdi zmdi-folder"></i>-->
-<!--            </sly-icon>-->
             <el-input placeholder="Please input destination directory" v-model="state.saveDir"></el-input>
         </sly-field>
-        <sly-field title="Name" description="py and json configurations will be saved with this name">
-<!--            <sly-icon slot="icon" :options="{ color: '#33c94c', bgColor: '#d9f7e4', rounded: false }">-->
-<!--                <i class="zmdi zmdi-star"></i>-->
-<!--            </sly-icon>-->
+        <sly-field title="Name" description="py and json configurations will be saved with this name. If name already
+                                             exists, a new one will be generated automatically">
             <el-input placeholder="Please input pipeline name" v-model="state.saveName"></el-input>
         </sly-field>
         <sly-field v-if="state.savedUrl"
@@ -168,7 +194,6 @@
             </div>
 
             <sly-field title="Augmenter Category" description="Choose augmentation category">
-                <!--                v-model="state.category"-->
                 <el-select :value="state.category" @input="
                     (val) => {
                         state.category = val;
@@ -185,7 +210,6 @@
                         state.aug = val;
                     }
                     ">
-                    <!--                    command('refresh_aug');-->
                     <el-option v-for="item in data.augs[state.category]" :key="item" :label="item"
                                :value="item"></el-option>
                 </el-select>
@@ -277,14 +301,6 @@
         <sly-card title="Preview"
                   subtitle="Preview python code and aug result on a random image"
                   style="width: 100%">
-
-            <sly-notification
-                    class="mb15"
-                    v-if="data.error"
-                    :options="{'name': 'Selected aug is broken. Please, contact support', 'type': 'error'}"
-                    :content="data.error">
-            </sly-notification>
-
             <div v-if="!state.previewPy">
                 <el-tag type="primary"><i class="zmdi zmdi-help-outline mr5"></i> Press Preview button to show python
                     code and visualize image examples
@@ -320,8 +336,6 @@
                         link to original docs <i class="zmdi zmdi-open-in-new"></i>
                     </a>
                 </div>
-
-                <!--                style="padding: 10px 10px 10px 10px;"-->
                 <sly-docstring class="mt10"
                                v-if="data.docs[state.category][state.aug]"
                                :data="data.docs[state.category][state.aug]">
